[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Levels/LevelEngine.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Smithy.tscn" type="PackedScene" id=4]

[node name="LevelEngine" type="Node2D"]
script = ExtResource( 1 )

[node name="SpeechBubble" parent="." instance=ExtResource( 3 )]
position = Vector2( 488, 448 )

[node name="WrongAnswerTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Smithy" parent="." instance=ExtResource( 4 )]

[node name="OnCompleteTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WrongAnswerTimer" to="." method="_on_WrongAnswerTimer_timeout"]
[connection signal="timeout" from="OnCompleteTimer" to="." method="_on_OnCompleteTimer_timeout"]
